# reference_tool

./: .gitignore  README.md  pyproject.toml
src/oxoria/: __main__.py  global_var.py
src/oxoria/_resources/init_config/: editor_config.json
src/oxoria/cmd/: app_api.py  canvas_api.py  io_api.py  resources_api.py  search_api.py  std_menu_cmd.py
src/oxoria/graphics/img/: image_hash.py
src/oxoria/search/: use_vector.py
src/oxoria/ui/: main_ui.py  ui_var.py
src/oxoria/ui/canvas_area/: canvas.py  graphics_item.py
src/oxoria/ui/initial/: initialise_ui.py
src/oxoria/ui/outline/: menu_bar.py
src/oxoria/ui/resources_lib/: registering_dialog.py  side_panel.py
src/oxoria/ui/tasktray/: tasktray_ui.py
